Fixed z-index issue with mathjax.

--- a/docs/style.css
+++ b/docs/style.css
@@ -17,6 +17,7 @@ Noscript####################################################
 	width:100vw;
 	min-height:30px;
 	background-color: rgba(0,0,0,0.7);
+	
 }
 .noscript_banner h1{
 	color:#eeeeee;
@@ -34,7 +35,7 @@ nav{
 	left: 0px;
 	background-color: #ffffff;
 	box-shadow: 0px -5px 20px;
-
+	z-index: 1;
 }
 nav .navinner{
 	display: flex;
